# tclreadline

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  GPL  Makefile.am  Makefile.in  README  README.FreeBSD  README.md  SCENARIO  TODO  Vagrantfile  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  pkgIndex.tcl  pkgIndex.tcl.in  provision-vagrant-vm.sh  sample.tclshrc  sources  tclreadline.c  tclreadline.h.in  tclreadline.n.in  tclreadlineCompleter.tcl  tclreadlineConfig.sh.in  tclreadlineInit.tcl.in  tclreadlineSetup.tcl  tclreadlineSetup.tcl.in  tclshrl.c  tests.tcl  wishrl.c
.github/workflows/: linux-ci.yml  mac-ci.yml
aux/: ltmain.sh  tcltags  vimtags
